# polymarket-trader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: settings.yaml
docs poly/: system_design_full.md
src/data/: gamma_validator.py  market_store.py  polymarket_client.py  schemas.py
tests/: conftest.py  test_gamma_validator.py  test_market_store.py  test_polymarket_client.py  test_schemas.py
